[gd_scene load_steps=7 format=1]

[ext_resource path="res://Agordoj.gd" type="Script" id=1]
[ext_resource path="res://Temoj/baskuligebla_butono_malsxalta.png" type="Texture" id=2]
[ext_resource path="res://Temoj/baskuligebla_butono_ensxalta.png" type="Texture" id=3]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Sonoj/Tabloj/130428__mmiron__na-sharp.ogg" type="AudioStream" id=5]
[ext_resource path="res://GUI/reen.png" type="Texture" id=6]

[node name="Agordoj" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 150.0
margin/right = 490.0
margin/bottom = 190.0
script/script = ExtResource( 1 )

[node name="Muzikoj" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -400.0
margin/top = 100.0
margin/right = 100.0
margin/bottom = 200.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Muzikoj"
flat = false
align = 0

[node name="Sonoj" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -400.0
margin/top = 250.0
margin/right = 100.0
margin/bottom = 350.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Sonoj"
flat = false
align = 0

[node name="Enveno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Reen" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = -150.0
margin/right = 220.0
margin/bottom = -10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[connection signal="toggled" from="Muzikoj" to="." method="_on_Muzikoj_toggled"]

[connection signal="toggled" from="Sonoj" to="." method="_on_Sonoj_toggled"]

[connection signal="pressed" from="Reen" to="." method="_on_Reen_pressed"]


